[package]
name = "RayTracingPaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.10.0"
error-iter = "0.4.1"
log = "0.4.18"
once_cell = "1.18.0"
pixels = "0.12.1"
rand = "0.8.5"
winit = "0.28.6"
winit_input_helper = "0.14.1"
